fix: Layout issues

--- a/theme.scss
+++ b/theme.scss
@@ -25,4 +25,4 @@ $font-regular: Inter;
 $font-icons: Phosphor;
 $font-nf: JetBrainsMono Nerd Font;
 
-$accent: $cyan;
+$accent: $light_green;
